# UTCD

./: CONTRIBUTING.md  FAQ.md  FUTURE_ROADMAP.md  LICENSE  README.md  SPEC.md  WHITEPAPER.md  pyproject.toml
abc/: GOVERNANCE.md  README.md  abc-schema.json  abc-spec.md
abc/examples/: analytics-agent.abc.yaml  eu-secure-analyst.abc.yaml
contracts/: GOVERNANCE.md  README.md  contract-schema.json  contract-spec.md
contracts/examples/: external-action-agent.contract.yaml  research-agent.contract.yaml
demo/: index.html
demos/: demo_degradation.py  demo_rejection.py  demo_selection.py  sign_descriptor.py
examples/: csv-analyzer.utcd.yaml  email-sender.utcd.yaml  file-reader.utcd.yaml  negotiable-agent.contract.yaml  unsafe-executor.utcd.yaml
schema/: utcd-core.schema.json
schema/profiles/: cost.schema.json  privacy.schema.json  security.schema.json
tests/: test_abc_schema.py  test_agent.py  test_validator.py
utcd/: __init__.py  abc_validator.py  agent.py  contract_validator.py  loader.py  signer.py  validator.py
